# analisa_politico

./: README.md  pyproject.toml
.github/workflows/: coleta.diaria.yml
data/: despesas_deputados.csv  df_deputados.csv  dimensao_deputados.csv  dimensao_frente.csv  dimensao_partidos.csv  info_deputados.csv  membros_frente.csv  tb_deputados.csv  test.txt  votacoes_detalhamento.csv  votacoes_informacoes.csv
notebooks/: eda.ipynb  tratamento_dados.ipynb
src/api/: deputados_api.py
src/dashboard/: app.py  callbacks.py  charts.py  layout.py  layout_pag2.py
src/dashboard/assets/: custom.css
src/dashboard/componentes/: frente_charts.py  gastos_charts.py  indicadores.py  outliers_charts.py
src/pipeline/: coleta_de_dados.py
