[project]
name = "dataglowup-43"
version = "0.1.0"
description = ""
authors = [
    {name = "Alan de Oliveira",email = "alandeoliveiradev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pandas (==2.1.1)",
    "numpy (==1.26.0)"
    
]

[tool.poetry]
packages = [{include = "dataglowup_43", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
