[project]
name = "dataglowup-43"
version = "0.1.0"
description = ""
authors = [
    {name = "Alan de Oliveira",email = "alandeoliveiradev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pandas (==2.1.1)",
    "numpy (==1.26.0)",
    "requests (>=2.32.3,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "plotly (>=6.0.1,<7.0.0)",
    "nbformat (>=5.10.4,<6.0.0)",
    "dash (>=3.0.4,<4.0.0)",
    "dash-bootstrap-components (>=2.0.2,<3.0.0)"
    
]

[tool.poetry]
packages = [{include = "dataglowup_43", from = "src"}]


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
